--- a/src/app/views/homepage/homepage.component.html
+++ b/src/app/views/homepage/homepage.component.html
@@ -4,6 +4,6 @@
     <label for="email">Adresse e-mail</label>
     <br>
     <input id="email" placeholder="name@example.com" type="email" [(ngModel)]="emailSig" name="email">
-    <button type="submit" (click)="submitForm()">Valider</button>
+    <button type="submit" (click)="submitForm()" routerlink="/delivery-tour">Valider</button>
   </form>
 </div>
