--- a/src/app/views/delivery-tour-display/delivery-tour-display.component.html
+++ b/src/app/views/delivery-tour-display/delivery-tour-display.component.html
@@ -28,3 +28,5 @@
     </mat-card>
   }
 </div>
+<!--<a routerLink="/tour-map"><button>Visualiser le trajet</button></a>-->
+<button (click)="openDialog('0ms', '0ms')">Visualiser le trajet</button>
