--- a/src/app/views/homepage/homepage.component.html
+++ b/src/app/views/homepage/homepage.component.html
@@ -1,9 +1,3 @@
-<div style="text-align: center">
-  <h3>Page de connexion</h3>
-  <form>
-    <label for="email">Adresse e-mail</label>
-    <br>
-    <input id="email" placeholder="name@example.com" type="email" [(ngModel)]="emailSig" name="email">
-    <a [routerLink]="['/delivery-tour']"><button type="submit" (click)="submitForm()">Valider</button></a>
-  </form>
+<div>
+  <mat-spinner></mat-spinner>
 </div>
