--- a/src/app/views/delivery-tour-display/delivery-tour-display.component.html
+++ b/src/app/views/delivery-tour-display/delivery-tour-display.component.html
@@ -1,28 +1,28 @@
 <div>
   <div style="text-align: center;">
-    <h3 style="margin-bottom: 0">Tournée {{ deliveryTourSig().refTour }}</h3>
-    <h4 style="margin-top: 0">du {{deliveryTourSig().refDay}}</h4>
-    <p><i>Entrepôt {{deliveryTourSig().warehouseName}}</i></p>
+    <h3 style="margin-bottom: 0">Tournée {{ deliveryService.deliveryTourSig().refTour }}</h3>
+    <h4 style="margin-top: 0">du {{deliveryService.deliveryTourSig().refDay}}</h4>
+    <p><i>Entrepôt {{deliveryService.deliveryTourSig().warehouseName}}</i></p>
   </div>
   <p><b>Equipe :</b></p>
   <ul>
-    <li><b>Livreurs :</b> {{ deliveryTourSig().deliverymen.join(', ') }}</li>
-    <li><b>Camion :</b> {{ deliveryTourSig().truck }}</li>
+    <li><b>Livreurs :</b> {{ deliveryService.deliveryTourSig().deliverymen.join(', ') | titlecase}}</li>
+    <li><b>Camion :</b> {{ deliveryService.deliveryTourSig().truck }}</li>
   </ul>
 </div>
 <mat-divider style="background: white"></mat-divider>
 <div>
-  <p><b>{{ deliveryTourSig().deliveries.length }} Livraisons</b></p>
+  <p><b>{{ deliveryService.deliveryTourSig().deliveries.length }} Livraisons</b></p>
 </div>
 <mat-divider style="background: white"></mat-divider>
 <div>
-  @for (delivery of deliveryTourSig().deliveries; track delivery; let i = $index) {
+  @for (delivery of deliveryService.deliveryTourSig().deliveries; track delivery; let i = $index) {
     <mat-card [ngClass]="{'elevated-card-even': i%2 === 0, 'elevated-card-odd': i%2 !=0}">
       <mat-card-header>
         <mat-card-title><b>({{ i + 1}}) Livraison {{delivery.deliveryId}}</b></mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p><b>Client :</b> {{ delivery.customer }} - {{mapService.formatAddress(delivery)}}</p>
+        <p><b>Client :</b> {{ mapService.formatClientName(delivery) }} - {{mapService.formatAddress(delivery)}}</p>
         <p><b>Commandes :</b> {{ delivery.orders.join(', ') }} </p>
       </mat-card-content>
     </mat-card>
@@ -33,4 +33,5 @@
 <button (click)="authService.logout()">Sign Out</button>
 <button (click)="authService.getUserId()">Uid</button>
 <button (click)="authService.createUserRowInFirebase(authService.getUserId(), authService.sigObsUser()?.email!)">Créer document User</button>
-<button (click)="deliveryService.changeDeliveryStatus('l135G-A11', deliveryTourSig().refTour, 'COMPLETED')">Change</button>
+<button routerLink="/delivery-tour/in-course">Démarrer la tournée</button>
+<button (click)="emptyLocalStorage()">Empty local storage</button>
