--- a/src/app/views/delivery-tour-incourse/delivery-tour-incourse.component.css
+++ b/src/app/views/delivery-tour-incourse/delivery-tour-incourse.component.css
@@ -9,3 +9,18 @@
 .in-course {
   background: green;
 }
+
+.side-menu-button {
+  background: none;
+  color: white;
+  border: white solid 1px;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  margin: 0.5em;
+}
+
+.side-menu-button:hover {
+  background: #9E9E9E;
+  color: black;
+}
